fix nav bar spacing

--- a/web/static/css/login.css
+++ b/web/static/css/login.css
@@ -18,7 +18,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background: linear-gradient(to right, #0d0d0d, #1a1a1a); 
-    padding: 15px 40px;
+    padding: 25px 40px;
     width: 100%; /* Ensures full width */
     box-shadow: 0px 4px 10px rgba(0, 255, 153, 0.4);
 }
